--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,7 +1,7 @@
 <%- include('header') -%>
     <div class="flex justify-center items-center h-screen">
         <div class="w-full max-w-xs space-y-6">
-            <p class="text-3xl font-bold">เข้าสู่ระบบ</p>
+            <p class="text-3xl font-bold">ลงทะเบียน</p>
             <form class="bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4 space-y-2">
                 <div class="mb-4">
                     <label class="block text-gray-700 text-sm font-bold mb-2" for="username">
@@ -19,18 +19,20 @@
                         class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 mb-3 leading-tight focus:outline-none focus:shadow-outline"
                         id="password" type="password" placeholder="******************">
                 </div>
+                <div class="mb-6">
+                    <label class="block text-gray-700 text-sm font-bold mb-2" for="password">
+                        ยืนยันรหัสผ่าน
+                    </label>
+                    <input
+                        class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 mb-3 leading-tight focus:outline-none focus:shadow-outline"
+                        id="password" type="password" placeholder="******************">
+                </div>
                 <div class="flex items-center justify-between">
                     <button
                         class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline"
                         type="button">
-                        เข้าสู่ระบบ
-                    </button>
-                    <a class="inline-block align-baseline font-bold text-sm text-blue-500 hover:text-blue-800" href="/register">
                         สมัครสมาชิก
-                    </a>
-                </div>
-                <div class="flex">
-                    <a class="inline-block align-baseline font-bold text-sm text-blue-500 hover:text-blue-800" href="">ลืมรหัสผ่าน</a>
+                    </button>
                 </div>
             </form>
         </div>
