fixed user and database

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,5 +2,14 @@
   <%- include('header') -%>
   <%- include('navbar') -%>
   <%- include('search') -%>
+  </div>
+  <script>
+    var app = new Vue({
+      el : '#app',
+      data: {
+        
+      }
+    })
+  </script>
 </body>
 </html>
