--- a/views/header.ejs
+++ b/views/header.ejs
@@ -6,6 +6,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Document</title>
   <link rel='stylesheet' href='/css/tailwind.css' />
-  <script src="./js/all.js"></script>
-  <script src="./js/vue.js"></script>
+  <script src="/js/all.js"></script>
+  <script src="/js/vue.js"></script>
 </head>
