--- a/views/about_guest.ejs
+++ b/views/about_guest.ejs
@@ -3,8 +3,8 @@
     <%- include('navbar') -%>
     <div class="flex justify-center">
         <div class="space-y-4 max-w-4xl">
-            <div class="border">
-                <p class="text-center text-2xl font-bold underline underline-offset-8">About</p>
+            <div class="py-4">
+                <p class="text-center text-2xl font-bold"><span class="border-b-4 py-1">About</span></p>
             </div>
             <div class="flex justify-center">
                 <p class="text-center">
