--- a/views/index_user.ejs
+++ b/views/index_user.ejs
@@ -3,6 +3,7 @@
   <%- include('navbar_user') -%>
   <%- include('search') -%>
   </div>
+    </div>
   <script>
     if(localStorage.getItem('user') == null){
       localStorage.setItem('user', (`<%- user %>`))
