--- a/views/about_guest.ejs
+++ b/views/about_guest.ejs
@@ -4,7 +4,7 @@
     <div class="flex justify-center">
         <div class="space-y-4 max-w-4xl">
             <div class="py-4">
-                <p class="text-center text-2xl font-bold"><span class="border-b-4 py-1">About</span></p>
+                <p class="text-center text-2xl font-bold"><span class="py-1 border-b-4 border-gray-800">About</span></p>
             </div>
             <div class="flex justify-center">
                 <p class="text-center">
