--- a/views/search.ejs
+++ b/views/search.ejs
@@ -1,8 +1,9 @@
-<div class="flex justify-center" id="app">
-    <div class="max-w-5xl justify-center flex w-full">
-        <div class="flex shadow appearance-none border rounded-xl w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline">
-            <img width="40px" src="/images/browser/search-interface-symbol.png" alt="">
-            <input class="border-none w-full text-lg px-4" type="text">
+<div class="container mx-auto max-w-7xl">
+    <div class="flex justify-center my-4">
+        <div class="max-w-5xl justify-center flex w-full">
+            <div class="flex shadow appearance-none border rounded-xl w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline">
+                <img width="40px" src="/images/browser/search-interface-symbol.png" alt="">
+                <input class="border-none w-full text-lg px-4" type="text">
+            </div>
         </div>
     </div>
-</div>
