--- a/views/navbar.ejs
+++ b/views/navbar.ejs
@@ -4,7 +4,7 @@
         <a href="" class="text-xl">ค้นหารถ</a>
         <a href="" class="text-xl">ขายรถยนต์</a>
         <a href="/about" class="text-xl">เกี่ยวกับ</a>
-        <a href="" class="text-xl">คำถามพบบ่อย</a>
+        <a href="/question" class="text-xl">คำถามพบบ่อย</a>
     </div>
     <div class="lg:flex items-center space-x-6 hidden">
         <div class="flex items-center space-x-2">
