--- a/views/about_user.ejs
+++ b/views/about_user.ejs
@@ -1,6 +1,7 @@
+<%- include('header') -%>
 <body>
-    <%- include('header') -%>
-        <%- include('navbar_user') -%>
+    <%- include('navbar_user') -%>
+    <div class="container mx-auto max-w-4xl">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto molestias doloribus amet accusantium
                 dicta sint asperiores sequi laudantium, obcaecati reprehenderit iure fuga, cum ex suscipit et eum
                 pariatur ut aliquid assumenda! Est recusandae voluptatum earum at dolores nisi dolorem mollitia
@@ -77,6 +78,7 @@
                 atque delectus distinctio possimus saepe? Sint, quos tempora. Magni velit, nam quibusdam praesentium
                 officiis ab itaque explicabo vel distinctio autem accusamus delectus suscipit beatae rem labore. Quia
                 optio debitis perferendis sunt!</p>
+        </div>
     </div>
     <script>
         var app = new Vue({
