--- a/views/index_user.ejs
+++ b/views/index_user.ejs
@@ -1,7 +1,9 @@
+<%- include('header') -%>
 <body>
-  <%- include('header') -%>
   <%- include('navbar_user') -%>
-  <%- include('search') -%>
+  <div class="container mx-auto max-w-7xl">
+    <%- include('search') -%>
+  </div>
   </div>
     </div>
   <script>
