--- a/views/navbar_user.ejs
+++ b/views/navbar_user.ejs
@@ -5,7 +5,7 @@
         <a href="" class="text-xl">ค้นหารถ</a>
         <a href="" class="text-xl">ขายรถยนต์</a>
         <a :href="'/connected/about/' + user.user_id" class="text-xl">เกี่ยวกับ</a>
-        <a href="" class="text-xl">คำถามพบบ่อย</a>
+        <a :href="'/connected/question/' + user.user_id" class="text-xl">คำถามพบบ่อย</a>
     </div>
     
     <div class="flex items-center space-x-6">
