--- a/views/navbar_user.ejs
+++ b/views/navbar_user.ejs
@@ -1,4 +1,4 @@
-<div id="app">
+<section id="app">
 <nav class="flex items-center px-12 py-8 justify-between" style="background: rgb(238, 237, 237);">
     <div class="space-x-6 flex items-center">
         <a :href="'/connected/' + user.user_id" class="text-3xl text-black font-bold">CAR USED</a>
