--- a/views/index_user.ejs
+++ b/views/index_user.ejs
@@ -1,21 +1,23 @@
 <%- include('header') -%>
-<body>
-  <%- include('navbar_user') -%>
-  <div class="container mx-auto max-w-7xl">
-    <%- include('search') -%>
-  </div>
-  </div>
-    </div>
-  <script>
-    if(localStorage.getItem('user') == null){
-      localStorage.setItem('user', (`<%- user %>`))
-    }
-    var app = new Vue({
-      el : '#app',
-      data: {
-        user : JSON.parse(localStorage.getItem('user'))
-      }
-    })
-  </script>
-</body>
-</html>
+
+  <body>
+    <%- include('navbar_user') -%>
+      <div class="container mx-auto max-w-4l">
+        <%- include('search') -%>
+      </div>
+      </div>
+      </section>
+      <script>
+        if (localStorage.getItem('user') == null) {
+          localStorage.setItem('user', (`<%- user %>`))
+        }
+        var app = new Vue({
+          el: '#app',
+          data: {
+            user: JSON.parse(localStorage.getItem('user'))
+          }
+        })
+      </script>
+  </body>
+
+  </html>
