--- a/views/about_guest.ejs
+++ b/views/about_guest.ejs
@@ -1,6 +1,9 @@
 <%- include('header') -%>
 <body>
     <%- include('navbar') -%>
+    <div>
+        <img src="" alt="">
+    </div>
     <div class="container mx-auto max-w-4xl">
         <div class="flex justify-center">
             <div class="space-y-4">
