--- a/frontend/public/css/style.css
+++ b/frontend/public/css/style.css
@@ -1,3 +1,12 @@
 .dropdown:hover .dropdown-menu {
     display: block;
+    animation: fadeout 0.5s ease-in-out;
+}
+@keyframes fadeout {
+    0%{
+        opacity: 0;
+    }
+    100%{
+        opacity: 1;
+    }
 }
