--- a/frontend/public/css/style.css
+++ b/frontend/public/css/style.css
@@ -11,6 +11,7 @@
     }
 }
 *{
+    scroll-behavior: smooth;
     font-family: 'Open Sans', sans-serif;
     font-family: 'Prompt', sans-serif;
 }
@@ -37,3 +38,15 @@
           height: 100vh
       }
   }
+.animate {
+    animation: animate 1s ease-in-out
+}
+@keyframes animate {
+    0% {
+        opacity: 0
+        
+    }
+    100%{
+        opacity: 1
+    }
+}
