--- a/frontend/public/css/style.css
+++ b/frontend/public/css/style.css
@@ -2,12 +2,24 @@
     display: block;
     animation: fadeout 0.5s ease-in-out;
 }
+.fadein {
+    display: block;
+    animation: fadein 0.5s ease-in-out;
+}
 @keyframes fadeout {
     0%{
         opacity: 0;
     }
     100%{
         opacity: 1;
+    }
+}
+@keyframes fadein {
+    0%{
+        opacity: 1;
+    }
+    100%{
+        opacity: 0;
     }
 }
 *{
