--- a/frontend/public/css/style.css
+++ b/frontend/public/css/style.css
@@ -30,6 +30,11 @@
     scroll-behavior: smooth;
     font-family: 'Open Sans', sans-serif;
     font-family: 'Prompt', sans-serif;
+    -moz-user-select: -moz-none;
+    -khtml-user-select: none;
+    -webkit-user-select: none;
+    -o-user-select: none;
+    user-select: none;
 }
 .h-fullsreen{
     height: 100%
@@ -66,3 +71,4 @@
         opacity: 1
     }
 }
+
