--- a/frontend/public/css/style.css
+++ b/frontend/public/css/style.css
@@ -39,6 +39,14 @@
 .h-fullsreen{
     height: 100%
 }
+.input-border {
+    outline: 0;
+    border-width: 0 0 2px;
+    border-color: transparent
+  }
+.input-border:focus {
+    border-color: rgb(212, 212, 212)
+}
 .bg-gra-01 {
     background: -webkit-gradient(linear, left bottom, left top, from(#fbc2eb), to(#a18cd1));
     background: -webkit-linear-gradient(bottom, #fbc2eb 0%, #a18cd1 100%);
